Added output message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ PROJECT(AlphaFamSeq)
 enable_language (Fortran)
 
 MESSAGE("You need to set the AlphaHouse Source (ALPHAHOUSESRC) and the path to the CMAKE Modules (CMAKEPATH) in your enviroment before using CMAKE")
+MESSAGE("CMAKEPATH=$ENV{CMAKEPATH} and ALPHAHOUSESRC=$ENV{ALPHAHOUSESRC}")
 #find_package(Doxygen)
 OPTION(RUN_TESTS "Run and compile tests"
   OFF)
@@ -73,7 +74,7 @@ endif(${USE_HDF5})
 # RELEASE, and TESTING.  You should  review this file and make sure the flags
 # are to your liking.
 INCLUDE(${CMAKE_MODULE_PATH}/SetFortranFlags.cmake)
-SET(SRCAH $ENV{AlphaHouseSrc})
+SET(SRCAH $ENV{ALPHAHOUSESRC})
 
 # Have the .mod files placed in the OBJ folder
 SET(CMAKE_Fortran_MODULE_DIRECTORY ${OBJ})
