--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CLUSTER 0 CACHE STRING "cluster size")
 if (DEFINED $ENV{CMAKEPATH})
   SET(CMAKE_MODULE_PATH $ENV{CMAKEPATH})
 else()
-  SET(CMAKE_MODULE_PATH ../alphacmakefiles/cmake/modules)
+  SET(CMAKE_MODULE_PATH $ENV{CMAKEPATH})
 
 endif()
 set(CMAKE_MACOSX_RPATH 0)
@@ -23,7 +23,7 @@ set(CMAKE_MACOSX_RPATH 0)
 if (DEFINED $ENV{AlphaHouseSrc})
   SET(SRCAH $ENV{AlphaHouseSrc})
 else()
-  SET(SRCAH ../alphahouse/src)
+  SET(SRCAH $ENV{ALPHAHOUSESRC})
 endif()
 
 #INCLUDE(${CMAKE_MODULE_PATH}/setVersion.cmake)
