fixed davids cmake mess up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,17 @@ set(CLUSTER 0 CACHE STRING "cluster size")
 SET(SRCAHTMP "../alphahouse/src/")
 SET(SRCACMAKE "${CMAKE_SOURCE_DIR}/../alphacmakefiles/cmake/modules")
 
-if (DEFINED $ENV{CMAKEPATH})
+if (DEFINED ENV{CMAKEPATH})
+	MESSAGE("CMAKEPATH DEFINED IN ENV!")
   SET(CMAKE_MODULE_PATH $ENV{CMAKEPATH})
 else()
   SET(CMAKE_MODULE_PATH ${SRCACMAKE})
-
+	MESSAGE("CMAKEPATH NOT DEFINED IN ENV: USING DEFAULT ${SRCACMAKE}")
 endif()
 set(CMAKE_MACOSX_RPATH 0)
 
-if (DEFINED $ENV{AlphaHouseSrc})
-  SET(SRCAH $ENV{AlphaHouseSrc})
+if (DEFINED ENV{ALPHAHOUSESRC})
+  SET(SRCAH $ENV{ALPHAHOUSESRC})
 else()
   SET(SRCAH ${SRCAHTMP})
 endif()
