--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@
 SET(AlphaFamSeq_src
             ${SRCAlphaFamSeq}ReadRogerData.f90
             ${SRCAlphaFamSeq}AlphaVarCallParallelised.f90
-	    ${SRCAlphaFamSeq}ComputeStat.f90
+        ${SRCAlphaFamSeq}ComputeStat.f90
+        ${SRCAlphaFamSeq}specFileModule.f90
             ${SRCAlphaFamSeq}AlphaFamSeqPlusGeneProb.f90
 )
 
