--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "alphahouse"]
 	path = alphahouse
 	url = https://bitbucket.org/hickeyjohnteam/alphahouse.git
+[submodule "alphamlp"]
+	path = alphamlp
+	url = https://bitbucket.org/hickeyjohnteam/alphamlp.git
